# AceLayer

./: .gitignore  CMakeLists.txt  Readme.md
elements/: Dummy_1.c  Dummy_2.c  Dummy_3.c  Dummy_4.c  T1_Laplace.c  dummy.nb  laplace.nb
include/: ace_layer.hpp  compile.hpp.in
src/: AceGenElement.cpp  CMakeLists.txt
tests/: CMakeLists.txt  test_assembly.cpp  test_data.cpp  test_element.cpp  test_output.cpp
